add advanced css control

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
           <div class="radio-inline">
             <label><input type="radio" name="element" class="radio" value="container">Toggle container</label>
           </div>
+          <div class="radio-inline">
+            <label><input type="radio" name="element" class="radio" value="advanced">Advanced CSS (element,property,value)</label>
+          </div>
           <button type="submit" class="btn">Change my CSS!</button>
         </form>
       </div>
